# online_training

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  payment_data.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.run/: server.run.xml
config/: celery.py  settings.py  urls.py
courses/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/management/commands/: create_moderator_group.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_course_options_alter_lesson_options.py  0003_course_created_at_course_updated_at_and_more.py
courses/services/: stripe_service.py
nginx/: nginx.conf
users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_db.py  load_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_options_payment.py  0002_payment_stripe_session_id_payment_stripe_session_url_and_more.py  0003_alter_payment_stripe_session_url.py  0004_alter_payment_amount_alter_payment_stripe_session_id_and_more.py  0005_alter_payment_stripe_session_url.py
