[tool.poetry]
name = " online-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.1"
djangorestframework = "^3.16.1"
pillow = "^12.1.0"
psycopg2 = "^2.9.11"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
