[tool.poetry]
name = " online-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.1"
djangorestframework = "^3.16.1"
pillow = "^12.1.0"
psycopg = "^3.3.2"
environs = "^14.5.0"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
stripe = "^14.2.0"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.19.1"
django-stubs = "^5.2.9"
coverage = "^7.13.1"
drf-spectacular = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
