[tool.poetry]
name = "online_training"
version = "0.1.0"
packages = []
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1"
djangorestframework = "^3.16.1"
pillow = "^12.1.0"
psycopg = "^3.3.2"
environs = "^14.5.0"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
stripe = "^14.2.0"
redis = "^7.1.0"
celery = "^5.6.2"
eventlet = "^0.40.4"
celery-types = "0.24.0"
coverage = "==7.13.2"
requests = "^2.32.5"
django-celery-beat = "^2.8.1"
poetry-core = "^2.3.0"
gunicorn = "^25.0.3"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.19.1"
django-stubs = "^5.2.9"
coverage = "^7.13.1"
drf-spectacular = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
